# BookStore-api

./: .env.prod  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  env.dev  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
docker/: entrypoint.sh  nginx.conf
order/: urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/serializer/: test_order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: category_serializer.py
product/tests/serializer/: test_category_serializer.py
product/tests/test_serializer/: test_product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
