[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["Ricardo Sprocati <ricardosprocatioliveira@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.2,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
factory-boy = ">=3.3.3,<4.0.0"
pytest = ">=8.4.0,<9.0.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
